<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.shobhitsagar.loginsv.MainActivity">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="20dp"
        app:layout_constraintGuide_percent="0.256" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:srcCompat="@drawable/upr_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/bgimage" />


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="100dp">

            <ImageView
                android:id="@+id/my_pic_icon"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@drawable/icon_bg1"
                android:src="@drawable/my_pic_icon"
                android:contentDescription="@string/myimage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textColor="#3d3d3e"
                    android:text="@string/welcome"
                    android:textSize="40sp">
                </TextView>

                <TextView
                    android:id="@+id/hl1_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="#514f4f"
                    android:text="@string/hl1_description"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:id="@+id/small1_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="#514f4f"
                    android:text="@string/small1_description"
                    android:textSize="17sp">
                </TextView>

                <TextView
                    android:id="@+id/small11_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:textColor="#514f4f"
                    android:text="@string/small11_description"
                    android:textSize="17sp">
                </TextView>

                <TextView
                    android:id="@+id/small12_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:textColor="#514f4f"
                    android:text="@string/small12_description"
                    android:textSize="17sp">
                </TextView>

                <TextView
                    android:id="@+id/hl2_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="#514f4f"
                    android:text="@string/hl2_description"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:id="@+id/small2_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:textColor="#514f4f"
                    android:text="@string/small2_description"
                    android:textSize="37sp">
                </TextView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
